--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ section{
 }
 
 #countinput{
-    width: 30rem;
+    width: 100%;
     height: auto;
     text-align: center;
     padding: 1.1rem 0.20rem;
@@ -85,7 +85,7 @@ section{
     font-size: 1.3rem;
     font-weight: 700;
     border: none;
-    border-radius: 8px;
+    border-radius:50px;
     text-transform:uppercase;
     background: #008545;
     color: #fff;
@@ -102,7 +102,7 @@ section{
     font-size: 1.3rem;
     font-weight: 700;
     border: none;
-    border-radius: 8px;
+    border-radius: 50px;
     text-transform:uppercase;
     color: #FFF;
     background: #a50c0c;
@@ -119,7 +119,7 @@ section{
     font-size: 1.3rem;
     font-weight: 700;
     border: none;
-    border-radius: 8px;
+    border-radius: 50px;
     text-transform:uppercase;
     color: #fff;
     background: #3498db;
